# SpaceMath

./: .gitignore  CMakeLists.txt  README.md
include/: spacemath.h
tests/: CMakeLists.txt  gen.cpp  main.cpp
